[package]
name = "qtable"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2" , features = ["derive"] }
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
log4rs = "1.3.0"
uuid = {version = "1.8.0" , features = ["v4"]}
config = "0.14.0"
lazy_static = "1.4.0"
futures = "0.3.30"
tempfile = "3.10.1"
walkdir = "2.5.0"
async-trait = "0.1.80"

[dev-dependencies]
mockall = "0.12.1"
